Update download options panel with a table of product types. Make download options header stays at the top and only product types area is scrollable. - In base.html (line 260), set the background of download options card body   to white so that the gray product types subheader are visible. - In cart.html (line 8, 24-25), rename "op-download-header" to   "op-download-options-header", "op-download-options-panel" to   "op-download-options-product-types", and "op-download-table" to   "op-download-options-table". - In cart.html (line 16-21, 37-41), put "v" as select all and "x" as   deselect all buttons for each product type, and also add them next to   select all product types and deselect all product types buttons. - In opus.css (line 896-924), add styling for new download options panel   changes. - In cart.js (line 35-351), init perfect scrollbar when   .op-download-options-product-types is rendered. - In cart.js (line 280, 288, 290-292), update adjustProductInfoHeight to   get the correct height for download options table, this is required to   make only product types area scrollable.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -368,10 +368,10 @@ ul.op-search-menu {
     text-align: center;
 }
 
-#cart .fa-times {
+/* #cart .fa-times {
     color: #eee;
     opacity: 0.15;
-}
+} */
 
 #op-confirm-modal {
     border-radius: 6px;
@@ -893,14 +893,34 @@ a:-webkit-any-link, a::any-link {
     padding-right: 1em;
 }
 
-#cart .op-download-table, #cart .op-download-table th, #cart .op-download-table td {
+/* Expand the width for table in cart download options panel */
+#cart .op-download-options-table, #cart .op-download-options-table th,
+#cart .op-download-options-table td {
     border-left: 0px;
     border-right: 0px;
 }
 
-#cart .op-download-table .fa-times {
-    color: #000;
-    opacity: 1;
+/* Make both buttons the same width */
+#cart .op-cart-select-btn, #cart .op-cart-deselect-btn {
+    width: 8%;
+    outline: none;
+}
+
+/* Remove the focus/hover background for "v" & "x" icon in download options
+panel */
+#cart .op-cart-select-btn:hover, #cart .op-cart-deselect-btn:hover,
+#cart .op-cart-select-btn:focus, #cart .op-cart-deselect-btn:focus {
+    background-color: #F0F3F5 !important;
+}
+
+/* Remove default scrollbar in #op-download-options-container */
+#cart #op-download-options-container {
+    overflow-y: hidden;
+}
+
+/* Required styling for perfect scrollbar in download options panel */
+#cart .op-download-options-product-types {
+    position: absolute;
 }
 
 #cart .col {
